# beneath

./: .gitignore  .gitlab-ci.yml  .pylintrc  .style.yapf  CODEOWNERS  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  beneath-build.sh  doc.go  go.mod  go.sum  init-venv.sh  package.json  proto-build.sh  requirements.txt  setup.py  taskqueue.Dockerfile  tst.txt
assets/: README.md
beneath/: _version.py  admin.py  base.py  client.py  config.py  stream.py  utils.py
beneath-frontend/: Dockerfile  README.md  apollo.config.js  launch.json  package-lock.json  package.json  server.js  tslint.json
beneath-gateway/: README.md  example.env  go.mod  go.sum  gqlgen-control.sh  proto-build.sh
beneath-go/: README.md  example.env  go.mod  go.sum  proto-build.sh
beneath-management/: README.md  example.env  ormconfig.js  package.json  tsconfig.json  tslint.json
beneath-models/: .pylintrc  README.md  init-virtual-env.sh  requirements.txt
beneath-python/: LICENSE  README.md  beneath-build.sh  proto-build.sh  requirements.txt  setup.py
bus/: README.md  bus.go
clients/: README.md
clients/python/: .flake8  .pylintrc  .style.yapf  CONTRIBUTING.md  Makefile  README.md  docs-requirements.txt  netlify.toml  pyproject.toml  requirements.txt  setup.py  test.py
clients/python/beneath/: __init__.py  _version.py  admin.py  base.py  checkpointer.py  client.py  config.py  connection.py  consumer.py  cursor.py  easy.py  instance.py  job.py  logging.py  schema.py  stream.py  table.py  utils.py  writer.py
clients/python/beneath/admin/: base.py  client.py  models.py  organizations.py  projects.py  secrets.py  services.py  streams.py  tables.py  users.py
clients/python/beneath/beam/: __init__.py  convert_types.py  read_from_beneath.py  write_to_beneath.py
clients/python/beneath/cli/: __init__.py  auth.py  model.py  organization.py  project.py  service.py  stream.py  table.py  utils.py
clients/python/beneath/pipeline/: __init__.py  base_pipeline.py  parse_args.py  pipeline.py  simple_pipeline.py
clients/python/beneath/proto/: engine.proto  gateway.proto  gateway_pb2.py  gateway_pb2_grpc.py
clients/python/beneath/utils/: __init__.py  aiobuffer.py  aiodelaybuffer.py  aiopoller.py  aioticker.py  aioworkerpool.py  identifiers.py  infer_avro.py  qualifiers.py
clients/python/docs/: api.rst  checkpointer.rst  client.rst  conf.py  consumer.rst  cursor.rst  easy.rst  errors.rst  index.rst  instance.rst  job.rst  pipeline.rst  stream.rst  table.rst
clients/python/docs/misc/: asyncio.rst  index.rst
clients/python/e2e/: e2e.ipynb
clients/python/examples/earthquake-notification-system/earthquakes/: earthquakes.py  kube.yaml
clients/python/examples/earthquake-notification-system/notifications/: Dockerfile  earthquake_notifications.py
clients/python/examples/ethereum-blocks/: Dockerfile  README.md  blocks-stable.graphql  blocks-unstable.graphql  fetch_blocks.py  kube.yaml  requirements.txt
clients/python/examples/ethereum-known-addresses/: README.md  known-addresses.graphql
clients/python/examples/lending-club/: README.md
clients/python/examples/lending-club/loans/: Dockerfile  fetch_new_loans.py  kube.yaml  load_historical_loans.ipynb  loans.graphql  requirements.txt
clients/python/examples/lending-club/loans-enriched/: Dockerfile  enrich_loans.py  kube.yaml  loans_enriched.graphql  model.pkl  requirements.txt  train_model.ipynb
clients/python/examples/lending-club/loans-history/: load_historical_loans.ipynb  loans_history.graphql
clients/python/examples/notebooks/: covid19.ipynb  e2e.ipynb
clients/python/examples/reddit-coronavirus-posts/: Dockerfile  kube.yaml  requirements.txt  stream_submissions.py
clients/python/tools/: dev-jupyter.sh  proto-build.sh
examples/beta/cdc-postgres/: .gitignore  README.md  cdc.py  config.yaml  create_testdb.py  main.py  pyproject.toml  schemas.py  snapshot.py
examples/beta/cdc-postgres/test/: create_source_db.py  operate_on_source_db.py  simple_test.py  test_schemas.py  write_source_records.py
examples/beta/clock/: main.py  pyproject.toml
examples/beta/clock/schemas/: clock-{{ frequency }}.gql
examples/beta/covid19/: covid19.ipynb  pyproject.toml
examples/cdc/fanout/postgres/: .dockerignore  .gitignore  README.md  config.yaml  main.py  pyproject.toml  schemas.py
examples/cdc/fanout/postgres/test/: create_source_db.py  delete_beneath_resources.sh  operate_on_source_db.py  test_schemas.py
examples/clock/: Dockerfile  README.md  clock.py  config.py  kube.yaml  main.py  pyproject.toml
examples/clock/deployment/1d/: Dockerfile  kube.yaml
examples/clock/deployment/1hr/: Dockerfile  kube.yaml
examples/clock/deployment/1m/: Dockerfile  kube.yaml
examples/clock/generators/: clock.py
examples/clock/schemas/: tick.gql
examples/earthquakes/: Dockerfile  README.md  kube.yaml  main.py  pyproject.toml
examples/earthquakes/deployment/: Dockerfile
examples/earthquakes/generators/: earthquakes.py
examples/earthquakes/schemas/: earthquake.graphql
examples/ethereum-blocks/: README.md  kube.yaml  main.py  pyproject.toml
examples/financial-reference-data/: load_stock_symbols.ipynb  pyproject.toml
examples/reddit/: README.md  config.py  kube.yaml  main.py  pyproject.toml
examples/reddit/deployments/: README.md  kube.yaml  r-cryptocurrency.yaml  r-datascience.yaml  r-politicaldiscussion.yaml  r-trendingreddits.yaml  r-wallstreetbets.yaml  r-webdev.yaml
examples/reddit/generators/: comments.py  posts.py
examples/reddit/schemas/: comment.graphql  post.graphql
examples/wallstreetbets-analytics/explore/: config.py  explore.ipynb  layout.py  pyproject.toml
examples/wallstreetbets-analytics/scores/: Dockerfile  config.py  deduplicate.py  get_scores.py  get_scores_pipeline.py  pyproject.toml  r-wallstreetbets-scores.yaml
examples/wallstreetbets-analytics/scores/schemas/: comment_score.graphql
examples/wallstreetbets-analytics/sentiment/: Dockerfile  predict_sentiment_pipeline.py  pyproject.toml  r-wallstreetbets-sentiment.yaml
examples/wallstreetbets-analytics/stock-prices/: load_daily_prices.ipynb  pyproject.toml
(+2257 files in other folders)
