[tool.poetry]
name = "clock"
version = "0.1.0"
description = ""
authors = ["Beneath Systems <hello@beneath.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beneath = "^1.2.14"
asyncio = "^3.4.3"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
