[tool.poetry]
name = "earthquakes"
version = "0.1.0"
description = ""
authors = ["Beneath Systems <hello@beneath.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.3"
asyncio = "^3.4.3"
beneath = "^1.3.1"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
