[tool.poetry]
name = "ethereum-blocks"
version = "0.1.0"
description = ""
authors = ["Beneath Systems <hello@beneath.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
beneath = "^1.3.5"
web3 = "^5.17.0"
tenacity = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
