[tool.poetry]
name = "financial-reference-data"
version = "0.1.0"
description = ""
authors = ["greenep12 <ericpgreen2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
beneath = "^1.4.0"
pandas = "^1.3.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
