[tool.poetry]
name = "reddit"
version = "0.1.0"
description = ""
authors = ["Benjamin Egelund-Müller <b@egelund-muller.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beneath = "^1.2.7"
asyncpraw = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
