[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["Beneath Systems <hello@beneath.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
beneath = "^1.2.12"
requests = "^2.25.1"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
