[tool.poetry]
name = "explore"
version = "0.1.0"
description = ""
authors = ["greenep12 <ericpgreen2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beneath = "^1.4.0"
plotly = "^5.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
